feat: parse templates with nunjucks

--- a/testing/layouts/main.html
+++ b/testing/layouts/main.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    {{> header.html }} {{ content }} {{> footer.html }}
+    {% include "header.html" %} {% block content %}{% endblock %} {% include
+    "footer.html" %}
   </body>
 </html>
